#54 adjusted api and open api
