# src/digitalIdentity-backend/src/main/java/didentity/amos/digitalIdentity/controller/SchemaController.java
@@ -32,9 +32,9 @@ public class SchemaController {
     @PostMapping(path = "/create", produces = MediaType.APPLICATION_JSON_VALUE)
     public @ResponseBody ResponseEntity<String> createSchema(
             @RequestParam(required = false) String authorization,
-            @RequestParam(required = false) String alias,
-            @RequestParam(required = false) String version,
-            @RequestParam(required = false) String attributes) {
+            @RequestParam(required = true) String alias,
+            @RequestParam(required = true) String version,
+            @RequestParam(required = true) String attributes) {
 
         if (authenticationService.authentication(authorization) == false) {
             return authenticationService.getError();
@@ -53,7 +53,7 @@ public class SchemaController {
             return authenticationService.getError();
         }
         if (activeState != null && !(activeState.equals("false") || activeState.equals("true"))) {
-            return ResponseEntity.status(400).body("If present, activeState shall be 'true' or 'false'.");
+            return ResponseEntity.status(400).body("Bad Request. If present, activeState shall be 'true' or 'false'.");
         }
 
         return schemaService.getAllSchema(activeState, searchText);
